--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: 'GitHub Actions To update content in README.md'
 
 on: 
   push:
-    paths:
-      - 'content'
+#    paths:
+#      - 'content'
   pull_request:
     paths:
       - 'content'
@@ -15,4 +15,4 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v1.2.0
       - name: update README.md with content
-        run: pwd
+        run: pwd && ls -a -R
