--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: 'GitHub Actions To update content in README.md'
 
 on: 
   push:
-#    paths:
-#      - 'content'
+    paths:
+      - 'content'
   pull_request:
     paths:
       - 'content'
@@ -13,17 +13,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: update README.md with content
+    - name: Update README.md with content
       run: python ./.github/workflows/updateREADME.py
-    - name: switching from HTTPS to SSH
-      run: git remote set-url origin ${{ secrets.ssh }}
-    - name: check for changes
-      run: git status
-    - name: stage changed files
-      run: git add .
-    - name: commit changed files
-      run: git commit -m "Updated content in README.md"
-    - name: fetch from master
-      run: git fetch origin master
-    - name: push code to master
-      run: git push origin HEAD:master
+    - name: Commit changes
+      run: |
+        git config --global user.email "naveenstudy2000sr@gmail.com"
+        git config --global user.name "nkpro2000"
+        git status
+        git add .
+        git commit -m "Updated content in README.md"
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        force: false
